[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "config"
path = "src/config.rs"

# cargo build --bin client
[[bin]]
name = "client"
path = "src/bin/client.rs"

# cargo build --bin server
[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio = {version = "1.26.0", features = ["full"]}